fix:  migration form mapper and validater

--- a/src/main/resources/templates/add-employee-bak.html
+++ b/src/main/resources/templates/add-employee-bak.html
@@ -58,6 +58,6 @@
 
     </tbody>
 </table>
-<!--<div th:insert="fragments/footer :: footer"></div>-->
+<div th:insert="~{fragments/footer :: footer}"></div>
 </body>
 </html>
