--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,23 +1,4 @@
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--<head>-->
-<!--    <meta charset = "UTF-8" />-->
-<!--    <link href = "css/header.css" rel = "stylesheet"/>-->
-<!--    <title>Employee Management</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div th:fragment="header" class="=headerComponent">-->
-<!--    <nav class="navBar">-->
-<!--        <ul>-->
-<!--            <li><a th:href="@{/employees}" class="headerButton">Home</a></li>-->
-<!--            <li><a th:href="@{/employees/add}" class="headerButton">Add Employee</a></li>-->
-<!--        </ul>-->
-<!--    </nav>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
 
-<!-- header.html -->
 <header class="bg-dark text-white py-3 fixed-top">
     <div class="container">
         <head>
@@ -27,12 +8,12 @@
         </head>
         <div class="row align-items-center">
             <div class="col-md-4">
-                <img src="/logo2.png" alt="Logo" class="img-fluid">
+                <a class="fw-bold" href="/"><img src="/logo2.png" alt="Logo" class="img-fluid"></a>
             </div>
             <div class="col-md-8 d-flex justify-content-end">
-                <a th:href="@{/employees/add}" class="headerButton">Add Employee</a>
+                <a class="text-white" th:href="@{/employees/add}">Add Employee</a>
                 <a class="text-white" href="/">Employees</a>
-                <a class="text-white" href="/quitSession">LogOut</a>
+                <a class="btn btn-link text-danger fw-bold" href="/quitSession">LogOut</a>
 
             </div>
         </div>
