--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
         </head>
         <div class="row align-items-center">
             <div class="col-md-4">
-                <a class="fw-bold" href="/"><img src="/logo2.png" alt="Logo" class="img-fluid"></a>
+                <a class="fw-bold" href="/"><img th:src="@{/image/logo.png}" alt="My Image" class="d-block" style="width: auto; height: 40px;" /></a>
             </div>
             <div class="col-md-8 d-flex justify-content-end">
                 <a class="text-white" th:href="@{/employees/add}">Add Employee</a>
