--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -30,14 +30,17 @@
 <footer class="position-relative w-100 bg-light py-4 mb-4 ">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 info">
+            <div class="col-md-2 info">
+                <img th:src="@{/image/logo.png}" alt="My Image" class="d-block" style="width: auto; height: 80px;" />
+            </div>
 
+            <div class="col-md-4 info">
                 <h4 th:text="${company.companyName}">Company Name</h4>
                 <p th:text="${company.slogan}">Slogan</p>
                 <p th:text="${company.address}">Exact Address</p>
             </div>
 
-            <div class="col-md-4 info">
+            <div class="col-md-3 info">
                 <img src="logo2.jpg" alt="Company Logo" class="img-fluid">
                 <h4>Contact</h4>
                 <p th:text="${company.contactEmail}">Contact Email</p>
@@ -45,7 +48,7 @@
 <!--                <p class="phone" th:each="phoneNumber : ${company.phoneNumbers}" th:text="${phoneNumber.number}"></p>-->
             </div>
 
-            <div class="col-md-4 info">
+            <div class="col-md-3 info">
                 <h4>Fiscal Identity</h4>
                 <p th:text="'NIF: ' + ${company.nif}">Tax Identification Number</p>
                 <p th:text="'STAT: ' + ${company.stat}">STAT Number</p>
