--- a/src/main/resources/templates/update-employee.html
+++ b/src/main/resources/templates/update-employee.html
@@ -76,6 +76,10 @@
                                       th:value="${employee.professionalEmail}"/></div>
         <br/>
 
+        <label class="col-sm-2 col-form-label">Monthly Salary:</label>
+        <div class="col-sm-10"><input type="number" class="form-control" name="monthlySalary"  min="0" th:value="${employee.monthlySalary}"/></div>
+        <br>
+
         <label class="col-sm-2 col-form-label">CIN Number:</label>
         <div class="col-sm-10"><input type="text" class="form-control" name="cinNumber"
                                       th:value="${employee.cinNumber}"/></div>
