--- a/src/main/resources/templates/add-employee.html
+++ b/src/main/resources/templates/add-employee.html
@@ -56,6 +56,10 @@
         <div class="col-sm-10"><input type="email" class="form-control" name="professionalEmail"/></div>
         <br/>
 
+        <label class="col-sm-2 col-form-label">Monthly Salary:</label>
+        <div class="col-sm-10"><input type="number" class="form-control" name="monthlySalary"  min="0"/></div>
+        <br>
+
         <label class="col-sm-2 col-form-label">CIN Number:</label>
         <div class="col-sm-10"><input type="text" class="form-control" name="cinNumber"/></div>
         <br/>
