--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-2 info">
-                <img th:src="@{/image/logo.png}" alt="My Image" class="d-block" style="width: auto; height: 80px;" />
+                <img th:src="@{/image/logo.png}" alt="Company logo" class="d-block" style="width: auto; height: 80px;" />
             </div>
 
             <div class="col-md-4 info">
@@ -41,11 +41,10 @@
             </div>
 
             <div class="col-md-3 info">
-                <img src="logo2.jpg" alt="Company Logo" class="img-fluid">
                 <h4>Contact</h4>
                 <p th:text="${company.contactEmail}">Contact Email</p>
                 <p>Phones:</p>
-<!--                <p class="phone" th:each="phoneNumber : ${company.phoneNumbers}" th:text="${phoneNumber.number}"></p>-->
+             <p class="phone" th:each="phoneNumber : ${company.phones}" th:text="${phoneNumber}"></p>
             </div>
 
             <div class="col-md-3 info">
